--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "minify": "terser assets/js/main.js -o assets/js/main.min.js"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
-    "bootstrap": "^5.3.3",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.25.3",
-    "jquery": "^3.7.1",
+    "jquery": "^3.6.0",
     "nuxt": "^2.15.8",
     "popper.js": "^1.16.1",
     "vue": "^2.7.10",
@@ -26,4 +28,3 @@
     "terser": "^5.30.3"
   }
 }
-
